More review changes and fixed scrollbars

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -130,7 +130,9 @@ body {
     color: $ctx-text-black;
   }
   
-  table {  
+  table {
+    display: inline-block !important;
+
     th {
       border-top: none !important;
       border-bottom: none !important;
